--- a/app/views/times/index.html.erb
+++ b/app/views/times/index.html.erb
@@ -27,7 +27,7 @@
 
 </div>
 
-<%= link_to("#", class: 'purchase-btn') do %>
+<%= link_to(new_record_path, class: 'purchase-btn') do %>
   <span class='purchase-btn-text'>記録する</span>
   <%= image_tag 'memo.png' , size: '185x50' ,class: "purchase-btn-icon" %>
 <% end %>
