--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -9,6 +9,13 @@
   flex-direction: column;
 }
 
+.my-page-header {
+  width: 100vw;
+  padding: 2vh 5vw;
+  display: flex;
+  flex-direction: column;
+}
+
 .nav {
   font-size: 18px;
   display: flex;
@@ -19,12 +26,27 @@
   font-family: "M PLUS 1p";
 }
 
+.my-page-nav {
+  font-size: 18px;
+  display: flex;
+  justify-content:space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  padding: 1vh 0;
+  font-family: "M PLUS 1p";
+}
+
+.left-space {
+  width: 220px;
+}
+
 .lists-right {
   display: flex;
   list-style: none;
-  align-items: flex-end;
+  align-items: center;
   line-height: 32px;
 }
+
 
 .user-nickname {
   text-decoration: none;
@@ -33,18 +55,16 @@
   font-weight: bold;
 }
 
-.logout {
+.logout,
+.sign-up,
+.record-destroy {
   text-decoration: none;
   color: #333333;
 }
 
-.login {
+.login,
+.record-edit {
   text-decoration: none;
   margin-right: 3vw;
-  color: #333333;
-}
-
-.sign-up {
-  text-decoration: none;
   color: #333333;
 }
